# shopify-graphql-linter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/shopify_query_analyzer/: __init__.py  analyzer.py  cli.py  config.py  diff.py  output.py  query_collector.py  schema_manager.py
src/shopify_query_analyzer/extractors/: __init__.py  base.py  graphql.py  php.py  typescript.py
test_files/: sample.graphql  sample.php
